# rust-book

./: .gitignore  Cargo.toml  README.md
chp1/: Cargo.toml  README.md
chp16/: chp16_1.rs  chp16_2.rs
chp2/: Cargo.toml  guessing_game.rs  guessing_game_lib.rs
chp3/: convert_temps.rs  fib.rs  fib_lib.rs  nth_fib.rs  twelve_days_of_christmas.rs
chp8/: commander.rs  company_directory.rs  mean_and_mode.rs  piglatin.rs
src/chp12/: main.rs  minigrep.rs
src/chp2/: guessing_game_lib.rs
src/chp2/tests/: test_guessing_game_lib.rs
src/chp2_00/: guessing_game.rs  guessing_game_lib.rs
src/chp3/: convert_temps.rs
src/chp3/convert_temps/: mod.rs
src/chp5_00/: main.rs
src/chp8/: main.rs
src/chp8_00/: main.rs
tests/: test_chp3-convert_temps.rs
