[package]
name = "rust-book"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2018"

[[bin]]
name = "rust-book"
path = "src/main.rs"

[[bin]]
name = "chp2"
path = "src/chp2/guessing_game.rs"

[[bin]]
name = "chp5"
path = "src/chp5/main.rs"

[[bin]]
name = "chp8"
path = "src/chp8/main.rs"

[[bin]]
name = "chp12"
path = "src/chp12/main.rs"

[dependencies]
rand = "0.4.0"
regex = "1"
