[package]
name = "rust-book"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.2.1"
rand = "0.7.0"
clap = "2.33.0"

[[bin]]
name="chp1"
path="./chp1/main.rs"

[[bin]]
name="chp2-guessing-game"
path="./chp2/guessing_game.rs"

[[bin]]
name="chp3-convert-temps"
path="./chp3/convert_temps.rs"

[[bin]]
name="chp3-nth-fib"
path="./chp3/nth_fib.rs"

[[bin]]
name="chp3-fib"
path="./chp3/fib.rs"

[[bin]]
name="chp3-twelve_days"
path="./chp3/twelve_days_of_christmas.rs"

[[bin]]
name="chp8"
path="./chp8/main.rs"

[[bin]]
name="chp8-mean-mode"
path="./chp8/mean_and_mode.rs"

[[bin]]
name="chp8-piglatin"
path="./chp8/piglatin.rs"

[[bin]]
name="chp8-company-directory"
path="./chp8/company_directory.rs"

[[bin]]
name="chp12-minigrep"
path="./chp12/main.rs"
